# inframind

./: .gitignore  CLAUDE.md  LICENSE  MODEL_CARD.md  MODEL_CARD_DAPO.md  README.md  dapo_training.py  eval_log_openai_gpt_4o_20251210_101409.txt  grpo_training.py  modal_app.py  modal_step1.py  modal_step2.py  modal_step3.py  modal_step4.py  pyproject.toml  requirements.txt  sanity_check.py  test_model.py  train_local.py
config/: base.yaml  dapo.yaml  grpo.yaml
configs/: base.yaml
docker/: Dockerfile
docs/: Planning  index.html
docs/Training/: interview_questions.md  overview.md  step1_load_model.md  step2_qlora_dataset.md  step3_lora_adapters.md  step4_train.md
docs/training/: README.md  step1_load_model.md  step2_qlora_dataset.md  step3_lora_adapters.md  step4_sft_training.md  step5_multistep_reasoning.md  step6_grpo_training.md  step7_dapo_training.md  step8_llm_judge.md
examples/: quickstart.py
iapo/: __init__.py  dataset.py  rewards.py  train.py
inframind/: __init__.py  dataset.py  rewards.py  train.py
inframind/core/: __init__.py  lora.py  model.py  quantization.py
inframind/data/: __init__.py  generators.py  loaders.py  templates.py
inframind/evaluation/: __init__.py  llm_judge.py
inframind/training/: __init__.py  trainer.py
inframind/utils/: __init__.py
inframind/utils/logging/: __init__.py  core.py  correlation.py  formatters.py  metrics.py
results/: dapo_eval_10samples.txt  dapo_eval_35-70.txt  dapo_eval_35-70_v2.txt  dapo_eval_35samples.txt  dapo_eval_70-110.txt  grpo_eval_110.txt  haproxy_variance_analysis.txt
scripts/: evaluate_gpt4.py  evaluate_heldout.py  generate_outputs.py  generate_templates.py  scrape_real_code.py  train.py
