[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inframind"
version = "0.1.0"
description = "Fine-tuning toolkit for training small language models on Infrastructure-as-Code"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Sai Kiran Rallabandi"}]
keywords = ["llm", "fine-tuning", "infrastructure", "devops", "terraform", "kubernetes", "grpo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "peft>=0.7.0",
    "trl>=0.7.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
cpu = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "peft>=0.7.0",
    "trl>=0.7.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/saikiranrallabandi/inframind"
Documentation = "https://github.com/saikiranrallabandi/inframind#readme"
Repository = "https://github.com/saikiranrallabandi/inframind"

[tool.setuptools.packages.find]
where = ["."]
include = ["inframind*"]
